# prpd

./: .gitignore  Cargo.toml  README.md
dev/: build.sh  download_openwrt_sdk.sh  http_post_event.sh  http_post_log.sh  run_http.sh  run_serial.sh  serial_socat.sh  serial_write_data.py
doc/: http.md  serial.md
hardware/: GL-AR150.md  README.md  case.scad
hardware/pcb/: .gitignore  fp-lib-table  prpd_hardware-cache.lib  prpd_hardware.kicad_pcb  prpd_hardware.pro  prpd_hardware.sch
hardware/pcb/prpd_hardware.pretty/: CAT5-T1U-2.8N4N.kicad_mod  tab.kicad_mod
src/: main.rs  output.rs  prometheus.rs
src/http/: data.rs  mod.rs
src/mqtt/: homeassistant.rs  mod.rs
src/serial/: data.rs  mod.rs
