[package]
name = "prpd"
version = "0.0.1"
authors = ["Benedikt Seidl <benedikt.seidl@gmx.de>"]
edition = "2018"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serialport = "4.0.0"
rocket = "0.4.6"
serde_json = "1.0.61"
crc-any = "2.3.5"
log = "0.4.0"
env_logger = "0.8.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.paho-mqtt]
version = "0.9.1"
features = ["vendored-ssl"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
